<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail"
    android:clipToPadding="false"
    tools:context=".ui.neighbour_list.DetailActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:src="@drawable/ic_star_border_white_24dp"
        android:id="@+id/favoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorBut"
        android:tint="#FFE436"
        app:layout_constraintBottom_toBottomOf="@+id/img"
...
